<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress_bar_detail"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_banner"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
            tools:src="?attr/colorPrimaryVariant" />

        <ImageView
            android:id="@+id/top_round"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:adjustViewBounds="true"
            android:background="@drawable/sh_rounded_top"
            android:src="?android:colorBackground"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@id/img_banner"
            app:layout_constraintEnd_toEndOf="@id/img_banner"
            app:layout_constraintStart_toStartOf="@id/img_banner"
            app:layout_constraintTop_toTopOf="@id/img_banner"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="ContentDescription" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="32dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="32dp" />

        <ImageView
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/sh_rounded_background"
            android:padding="4dp"
            android:src="@drawable/ic_share_white"
            app:layout_constraintEnd_toEndOf="@id/img_banner"
            app:layout_constraintTop_toTopOf="@id/img_banner"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/sh_rounded_background"
            android:padding="4dp"
            android:src="@drawable/ic_favorite_white"
            app:layout_constraintEnd_toStartOf="@id/btn_share"
            app:layout_constraintTop_toTopOf="@id/img_banner"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/icon_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_fork_knife_royal"
            app:layout_constraintStart_toEndOf="@+id/guideline3"
            app:layout_constraintEnd_toStartOf="@id/tv_score"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="?attr/colorOnBackground"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@id/icon_score"
            app:layout_constraintStart_toEndOf="@id/icon_score"
            app:layout_constraintTop_toTopOf="@id/icon_score"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="96%" />

        <ImageView
            android:id="@+id/icon_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_like_blue"
            app:layout_constraintStart_toEndOf="@id/guideline3"
            app:layout_constraintEnd_toStartOf="@id/tv_like"
            app:layout_constraintTop_toBottomOf="@id/icon_score"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="?attr/colorOnBackground"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@id/icon_like"
            app:layout_constraintStart_toEndOf="@id/icon_like"
            app:layout_constraintTop_toTopOf="@id/icon_like"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="115" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="?attr/colorOnBackground"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_banner"
            tools:text="@string/dummy_recipe_name" />

        <TextView
            android:id="@+id/tv_dish_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="?attr/colorOnBackground"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:text="@string/dummy_appetizer" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/text_servings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/text_servings"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?attr/colorOnBackground"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_dish_type" />

        <TextView
            android:id="@+id/tv_servings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?attr/colorOnBackground"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_servings"
            tools:text="@string/dummy_servings" />

        <TextView
            android:id="@+id/text_cooking_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/text_cooking_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?attr/colorOnBackground"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_servings" />

        <TextView
            android:id="@+id/tv_cooking_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?attr/colorOnBackground"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_cooking_time"
            tools:text="@string/dummy_cooking_time" />

        <TextView
            android:id="@+id/text_source"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/text_source"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?attr/colorOnBackground"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_servings" />

        <TextView
            android:id="@+id/tv_source"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?attr/colorOnBackground"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_source"
            tools:text="@string/dummy_source" />

        <TextView
            android:id="@+id/text_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_summary"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?attr/colorOnBackground"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_cooking_time" />

        <TextView
            android:id="@+id/tv_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:justificationMode="inter_word"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?attr/colorOnBackground"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_summary"
            tools:ignore="UnusedAttribute"
            tools:text="@string/dummy_summary" />

        <TextView
            android:id="@+id/text_ingredients"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_ingredients"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?attr/colorOnBackground"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_summary" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lv_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/text_ingredients"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/item_ingredients"/>

        <TextView
            android:id="@+id/text_instructions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/text_instructions"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?attr/colorOnBackground"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lv_ingredients" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lv_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/text_instructions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/item_ingredients"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"
            app:layout_constraintTop_toBottomOf="@id/lv_instructions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>